--- a/Backend/package.json
+++ b/Backend/package.json
@@ -19,7 +19,9 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^9.0.0",
+    "nodemailer": "^7.0.11",
     "nodemon": "^3.1.11",
+    "otp-generator": "^4.0.1",
     "validator": "^13.15.23"
   }
 }
